# LOUDCRAB

./: .dockerignore  .gitignore  CATS  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.builds  MALCOLM  Makefile  README.md  SEEDS  WHALES  build.sh  justfile
.github/workflows/: build.yml
src/: classifier.rs  lib.rs  loudbot.rs  triggers.rs
src/brain/: classifier.rs  loudbot.rs  mod.rs
src/data/: CATS  SHIPS  STAR_FIGHTING
src/faces/: mod.rs  slack_rtm.rs  slack_webhooks.rs
