[package]
authors = ["C J Silverio <ceejceej@gmail.com>"]
default-run = "LOUDBOT"
edition = "2021"
name = "LOUDCRAB"
version = "0.3.0"

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
log = "0.4.14"
rand = "0.8.3"
redis = { version = "0.21.4", features = ["async-std-comp"] }
regex = "1"
serde = "1.0.114"
serde_json = "1.0.64"
simple_logger = "2.1.0"
smol = "1.0.1"

[dependencies.slack_api]
features = ["sync", "reqwest_blocking"]
version = "0.23.1"

[dependencies.tide]
version = "0.16.0"
default-features = false
features = [ "h1-server" ]
