[package]
authors = ["C J Silverio <ceejceej@gmail.com>"]
default-run = "LOUDBOT"
edition = "2021"
name = "LOUDCRAB"
version = "0.4.1"

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
log = "0.4.14"
rand = "0.8.3"
redis = { version = "0.21.4", features = ["async-std-comp"] }
regex = "1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.64"
simple_logger = "2.1.0"
axum = "0.5.1"
tokio = { version = "1.17.0", features = ["full"] }

[dependencies.slack_api]
default-features = false
features = ["async", "reqwest", "with_rustls"]
git = "https://github.com/ceejbot/slack-rs-api"
