[package]
authors = ["C J Silverio <ceejceej@gmail.com>"]
default-run = "LOUDBOT"
edition = "2021"
name = "LOUDCRAB"
version = "0.4.2"

[dependencies]
anyhow = "1"
dotenv = "0.15.0"
log = "0.4.17"
rand = "0.8.5"
redis = { version = "0.22.1", features = ["async-std-comp"] }
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
simple_logger = "2.3.0"
axum = "0.5.16"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.25"
async-once-cell = "0.4.2"

[dependencies.slack_api]
default-features = false
features = ["async", "reqwest", "with_rustls"]
git = "https://github.com/ceejbot/slack-rs-api"
